--- a/src/scss/partials/variable.scss
+++ b/src/scss/partials/variable.scss
@@ -7,6 +7,7 @@ $color-secondary:#F32F30;
 $color-bg:#f5f5f5;
 $color-bg-text:#B6B6B6;
 $color-blue:#174BDD;
+$blue-light-1:#2B79F7;
 $blue-light:#96A5CD;
 $color-grey:#e3e3e3;
 $color-error:#FFC000;
