--- a/src/scss/pages/resources.scss
+++ b/src/scss/pages/resources.scss
@@ -1,10 +1,8 @@
 .page-wrap{
     button{
-        background: none;
-        border: none;
-        padding: 0px;
-        &:focus{
-            box-shadow: none;
+        padding: .5rem 1rem;
+        &:hover{
+            color:$color-white;
         }
     }
     .main-content{
@@ -56,7 +54,6 @@
     
                             i {
                                 color: $color-green;
-                                transform: rotate(180deg);
                                 font-weight: 600;
                                 &::before{
                                     color:$color-green;
@@ -73,6 +70,7 @@
                         .css-yk16xz-control,.css-lpahdxg-control{
                             border-radius: 0;
                         } 
+                        
                         .css-1okebmr-indicatorSeparator{
                             display: none;
                         }
