new updated hovering effects

--- a/src/scss/pages/map.scss
+++ b/src/scss/pages/map.scss
@@ -606,11 +606,7 @@
                             }
                         }
                         &:hover{
-                            .report-content{
-                                h5{
-                                    color:$color-blue;
-                                }
-                            }
+                            background: $color-bg;
                         }
                     }
                 }
