new hovereffects disabled

--- a/src/scss/pages/map.scss
+++ b/src/scss/pages/map.scss
@@ -605,9 +605,9 @@
                                 }
                             }
                         }
-                        &:hover{
-                            background: $color-bg;
-                        }
+                        // &:hover{
+                        //     background: $color-bg;
+                        // }
                     }
                 }
             }
