--- a/src/scss/pages/map.scss
+++ b/src/scss/pages/map.scss
@@ -567,8 +567,9 @@
                     li {
                         @include flexBetween;
                         margin: 1.5rem 0 0 0;
+                        padding: .25rem .5rem;
                         cursor: pointer;
-
+                        @include animate_all(all .5s linear);
                         .report-content {
                             h5 {
                                 font-size: .875rem;
@@ -605,9 +606,9 @@
                                 }
                             }
                         }
-                        // &:hover{
-                        //     background: $color-bg;
-                        // }
+                        &:hover{
+                            background: $color-bg;
+                        }
                     }
                 }
             }
