--- a/src/scss/pages/map.scss
+++ b/src/scss/pages/map.scss
@@ -32,10 +32,10 @@
             @include animate_all(all .6s linear);
             h6 {
                 font-weight: 600;
-                font-size: .8rem;
+                font-size: .7rem;
                 @include flexBetween;
                 span{
-                    font-size: .745rem;
+                    font-size: .625rem;
                     font-weight: 400;
                     color:$color-green;
                 }
@@ -490,14 +490,18 @@
                         .css-2b097c-container,
                         .css-14jk2my-container {
                             width: 100%;
-                             .css-1okebmr-indicatorSeparator,.css-109onse-indicatorSeparator{
-                                 display: none;
-                             }
+                            .css-1okebmr-indicatorSeparator,.css-109onse-indicatorSeparator{
+                                display: none;
+                            }
 
                             .css-yk16xz-control,
                             .css-1fhf3k1-control {
                                 border: 1px solid $color-border;
                                 border-radius: 0;
+                            }
+
+                            .css-yk16xz-control{
+                                border-radius: .25rem;
                             }
 
                             .css-1pahdxg-control {
@@ -629,7 +633,7 @@
                         @include flexBetween;
                         margin: 1.5rem 0 0 0;
                         align-items: center;
-                        padding: .25rem .5rem;
+                        padding: .4rem .5rem .25rem;
                         cursor: pointer;
                         @include animate_all(all .5s linear);
                         &:hover{
