--- a/src/scss/pages/map.scss
+++ b/src/scss/pages/map.scss
@@ -381,7 +381,16 @@
 
         .leaflet-container {
             z-index: 1;
-
+            .leaflet-map-pane{
+                .leaflet-marker-pane{
+                    .leaflet-marker-icon{
+                        i{
+                            color: $primary-light;
+                            font-size: 1.125rem;
+                        }
+                    }
+                }
+            }
         }
 
 
@@ -497,10 +506,6 @@
                             .css-yk16xz-control,
                             .css-1fhf3k1-control {
                                 border: 1px solid $color-border;
-                                border-radius: 0;
-                            }
-
-                            .css-yk16xz-control{
                                 border-radius: .25rem;
                             }
 
@@ -584,6 +589,7 @@
                         padding: .25rem .5rem;
                         cursor: pointer;
                         @include animate_all(all .5s linear);
+                        border-bottom: 1px solid $color-grey;
                         .report-content {
                             h5 {
                                 font-size: .875rem;
