--- a/src/scss/pages/map.scss
+++ b/src/scss/pages/map.scss
@@ -388,8 +388,12 @@
                 .leaflet-marker-pane{
                     .leaflet-marker-icon{
                         i{
-                            color: $primary-light;
+                            @include animate_all(all .6s linear);
+                            color: $color-green;
                             font-size: 1.125rem;
+                            &:hover{
+                                color: $color-grey;
+                            }
                         }
                     }
                 }
@@ -467,13 +471,13 @@
                     position: absolute;
                     right: 2rem;
                     top: .5rem;
-                    color: $color-dim;
+                    color: $color-blue;
                     font-size: 2rem;
                     cursor: pointer;
                     z-index: 999;
 
                     &:hover {
-                        color: $color-green;
+                        color: $color-dim;
                     }
                 }
 
