--- a/src/components/OpenSpace/OpenSpaceCSS.css
+++ b/src/components/OpenSpace/OpenSpaceCSS.css
@@ -43,35 +43,32 @@
     color: red;
 }
 .OSmarkers {
-    width:15px !important;
-    height: 15px !important;
+    width:22px !important;
+    height: 22px !important;
     background-color: blue;
-    border-radius: 10px;
+    border-radius: 15px;
     background-clip: padding-box;
-    border:solid 4px rgba(6, 6, 247,0.2);
+    border:solid 6px rgba(6, 6, 247,0.2);
     z-index: 200;
 }
 .OSmarkers:hover{
     background-color: white;
-    border-radius: 10px;
-    background-clip: padding-box;
-    border:solid 6px rgba(6, 6, 247,0.8)
+    
+   
+    border:solid 9px rgba(6, 6, 247,0.8)
 }
 .nearbymarker{
-    width:15px !important;
-    height: 15px !important;
+    width:22px !important;
+    height: 22px !important;
     background-color: green;
-    border-radius: 10px;
+    border-radius: 15px;
     background-clip: padding-box;
-    border:solid 4px rgba(2, 158, 2,0.1);
-    transition: transform 1s;
-    z-index: 202;
+    border:solid 6px rgba(11, 170, 5, 0.2);
+
 }
 .nearbymarker:hover{
     background-color: white;
-    border-radius: 10px;
-    background-clip: padding-box;
-    border:solid 6px rgba(2, 158, 2,0.8);
+    border:solid 9px rgba(11, 170, 5, 0.8);
 
 }
 
